--- a/report_ledger/src/components/users/healthrecordcard.css
+++ b/report_ledger/src/components/users/healthrecordcard.css
@@ -4,6 +4,11 @@
     margin-right: 10px;
     width: 100%;
     background-color: rgb(130, 164, 194);
+    border-radius: 7px;
+}
+
+.headdingwh{
+    color: white;
 }
 
 .health-card > * {
